<resources>
    <string name="app_name">Livraria (Kotlin + JetPack)</string>
    <string name="action_clear_list">Excluir Todos Os Livros</string>
    <string name="adicionar_livro">Adicionar Livro</string>
    <string name="autor_hint">Autor..</string>
    <string name="autor_label">Autor</string>
    <string name="book_deleted_label">Livro Excluído</string>
    <string name="book_hint">Nome do Livro..</string>
    <string name="book_label">Nome do Livro</string>
    <string name="btn_delete_label">EXCLUIR</string>
    <string name="btn_save_label">SALVAR</string>
    <string name="confirmacao_excluir_lista">Tem certeza que deseja excluir todos os livros?</string>
    <string name="dialog_nao">NÃO</string>
    <string name="dialog_sim">SIM</string>
    <string name="empty_book_not_saved">Livro vazio, não salvo</string>
    <string name="exclude_book">Tem certeza que deseja excluir este livro?</string>
    <string name="genero_hint">Genero..</string>
    <string name="genero_label">Genero</string>
    <string name="livro_numero_label">Livro Número:</string>
    <string name="obrigatorio_nome_livro">É necessário informar o nome do livro</string>
    <string name="obrigatorio_autor">É necessário informar o autor</string>
    <string name="obrigatorio_genero">É necessário informar um genero</string>
    <string name="obrigatorio_preco">Obrigatório informar um preço</string>
    <string name="preco_label">Preço</string>
    <string name="preco_hint">Preço..</string>
    <string name="toast_livros_excluidos">Livros excluidos</string>
    <string name="total_label">Total de Livros:</string>
    <string name="total_txt">0</string>
</resources>
