<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="view.NewBookActivity"
        android:background="@color/colorPrimaryLight">

    <!--<TextView-->
            <!--android:id="@+id/livro_label"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/livro_numero_label"-->
            <!--android:textStyle="bold"-->
            <!--android:textSize="15sp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginStart="20dp" />-->

    <!--<TextView-->
            <!--android:id="@+id/livro_num"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="0"-->
            <!--android:textStyle="bold"-->
            <!--android:textSize="15sp"-->
            <!--android:paddingLeft="5sp"-->
            <!--app:layout_constraintStart_toEndOf="@+id/livro_label"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--android:layout_marginTop="20dp"/>-->

    <TextView
            android:id="@+id/book_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_book_label"
            android:layout_marginLeft="@dimen/margin_left_book_label"
            android:layout_marginStart="@dimen/margin_start_book_label"
            android:text="@string/book_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/book_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:layout_marginTop="@dimen/margin_top_book_txt"
            android:layout_marginLeft="@dimen/margin_left_book_txt"
            android:layout_marginStart="@dimen/margin_start_book_txt"
            android:hint="@string/book_hint"
            app:layout_constraintTop_toBottomOf="@+id/book_label"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/genero_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_genero_label"
            android:layout_marginLeft="@dimen/margin_left_genero_label"
            android:layout_marginStart="@dimen/margin_start_genero_label"
            android:text="@string/genero_label"
            app:layout_constraintTop_toBottomOf="@+id/book_txt"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/genero_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="@dimen/margin_top_genero_txt"
            android:layout_marginLeft="@dimen/margin_left_genero_txt"
            android:layout_marginStart="@dimen/margin_start_genero_txt"
            android:hint="@string/genero_hint"
            app:layout_constraintTop_toBottomOf="@+id/genero_label"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/autor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_autor_label"
            android:layout_marginLeft="@dimen/margin_left_autor_label"
            android:layout_marginStart="@dimen/margin_start_autor_label"
            android:text="@string/autor_label"
            app:layout_constraintTop_toBottomOf="@+id/genero_txt"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/autor_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:layout_marginTop="@dimen/margin_top_autor_txt"
            android:layout_marginLeft="@dimen/margin_left_autor_txt"
            android:layout_marginStart="@dimen/margin_start_autor_txt"
            android:hint="@string/autor_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autor_label"/>

    <TextView
            android:id="@+id/preco_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_preco_label"
            android:layout_marginLeft="@dimen/margin_left_preco_label"
            android:layout_marginStart="@dimen/margin_start_preco_label"
            android:text="@string/preco_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autor_txt"/>

    <EditText
            android:id="@+id/preco_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_preco_txt"
            android:layout_marginLeft="@dimen/margin_left_preco_txt"
            android:layout_marginStart="@dimen/margin_start_preco_txt"
            android:hint="@string/preco_hint"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preco_label"/>

    <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_btn_save"
            android:text="@string/btn_save_label"
            android:background="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
            <!--app:layout_constraintEnd_toStartOf="@+id/btn_delete"/>-->

    <!--<Button-->
            <!--android:id="@+id/btn_delete"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="@dimen/margin_bottom_btn_delete"-->
            <!--android:layout_marginLeft="@dimen/margin_left_btn_delete"-->
            <!--android:layout_marginStart="@dimen/margin_start_btn_delete"-->
            <!--android:layout_marginRight="@dimen/margin_right_btn_delete"-->
            <!--android:layout_marginEnd="@dimen/margin_end_btn_delete"-->
            <!--android:text="@string/btn_delete_label"-->
            <!--android:background="@color/colorAccent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toEndOf="@+id/btn_save"/>-->

</android.support.constraint.ConstraintLayout>